Fixed box alignment and updated HTML/CSS

--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
 * {
     margin: 0;
-    font-family: arial;
-    border: border-box;   
+    font-family: Arial, sans-serif;
+    box-sizing: border-box;   
 }
-.navbar{
+
+/* Navbar */
+.navbar {
     height: 60px;
     background-color: #0f1111;
     color: white;
@@ -11,39 +13,47 @@
     align-items: center;
     justify-content: space-evenly;
 }
-.nav-logo{
+
+.nav-logo {
     height: 50px;
     width: 100px;
 }
-.logo{
+
+.logo {
     background-image: url("amazon_logo.jpg");
     height: 50px;
     width: 100px;
     background-size: cover;
 }
-.border{
+
+.border {
     border: 1.5px solid transparent;
 }
-.border:hover{
-    border: 1.5px solid white;
+
+.border:hover {
+    border: 1.5px solid white; 
+    cursor: pointer;
 }
-/* box-2 */
-.add-first{
+
+/* Address */
+.add-first {
    color: #cccccc;
    font-size: 0.85rem;
    margin-left: 15px;
 }
-.add-sec{
+
+.add-sec {
    font-size: 1rem;
    margin-left: 3px;
 }
-.add-icon{
+
+.add-icon {
     display: flex;
     align-items: center; 
-     /* cross axis center at  (height wise)*/
 }
-/* box3 */
-.nav-search{
+
+/* Search Bar */
+.nav-search {
     display: flex;
     justify-content: space-evenly;
     background-color: pink;
@@ -51,7 +61,8 @@
     height: 40px; 
     border-radius: 4px;
 }
-.search-select{
+
+.search-select {
     background-color: #f3f3f3;
     width: 50px;
     text-align: center;
@@ -59,49 +70,51 @@
     border-bottom-left-radius: 4px;
     border: none;
 }
-.search-input{
+
+.search-input {
     width: 100%;  
-      /* remaining space for search area */
     font-size: 1rem;
     border: none;
+    outline: none;
 } 
-.search-icon{
+
+.search-icon {
     width: 45px;
     display: flex;
     justify-content: center;
-    /* { for horizontal} */
     align-items: center;
-    /* for vertically in center*/
     font-size: 1.2rem;
     background-color: #febd68;
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
     color: #0f1111;
 }
-.nav-search:hover{
-    border: 2px solid orange;
 
+.nav-search:hover {
+    border: 2px solid orange;
 }
-/*box4*/
-span{
+
+/* Account and Cart */
+span {
     font-size: 0.7rem;
 }
-.nav-sec{
-    font-size: 0.85rem;
-    font-weight: 700; /*bold*/
 
-}
-/*box6*/
-/* i is written to  apply css for specific icon only*/
-.nav-cart i { 
-      font-size: 35px;
-}
-.nav-cart{
+.nav-sec {
     font-size: 0.85rem;
     font-weight: 700;
 }
-/**panel**/
-.panel{
+
+.nav-cart i { 
+    font-size: 35px;
+}
+
+.nav-cart {
+    font-size: 0.85rem;
+    font-weight: 700;
+}
+
+/* Panel */
+.panel {
    height: 40px;
    background-color: #222f3d;
    display: flex;
@@ -109,30 +122,33 @@ span{
    align-items: center;
    justify-content: space-evenly;
 }
+
 .panel-ops p {
     display: inline;
-    /*for all  same line*/
     margin-left: 15px;
-
 }
-.panel-ops{
+
+.panel-ops {
     width: 70%;
     font-size: 0.85rem;
 }
-.panel-deals{
+
+.panel-deals {
     font-size: 0.9rem;
     font-weight: 700;
 }
-/**hero section**/
-.hero-sec{
+
+/* Hero Section */
+.hero-sec {
     background-image: url("amazon-hero-img.jpg");
     height: 380px;
     background-size: cover;
     display: flex;
     justify-content: center;
-    align-items: flex-end;/* cross axis will be from top to bottom and flex end will be at bottom*/
+    align-items: flex-end;
 }
-.hero-msg{
+
+.hero-msg {
     background-color: white;
     color: black;
     height: 40px;
@@ -143,102 +159,105 @@ span{
     width: 80%;
     margin-bottom: 25px;
 }
+
 .hero-msg a {
     color: #007185;
-
 }
-/**shop-sec**/
-.shop-sec{
+
+/* Shop Section */
+.shop-sec {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    /** when we need equal even space**/
     background-color: #e2e7e6;
-
 }
-.box{
+
+.box {
     height: 400px;
-    border: 2px solid black;
     width: 23%;
     background-color: white;
-    padding: 20px 0px 15px;
+    padding: 20px 15px 15px;
     margin: 15px;
+    border: 2px solid black;
+    box-sizing: border-box;
 }
-.box-img{
-    height: 325px;
-    width: 325px;
+
+.box-img {
+    height: 300px;
+    width: 100%;
     background-size: cover;
     background-repeat: no-repeat;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
+    margin: 1rem 0;
 }
-.box-content{
-    margin-left: 1rempx;
-    margin-right: 1rempx;
-    /** 1 rem=16px**/
-}
-.box-content{
+
+.box-content {
+    margin: 0 1rem;
     color: #007185;
 }
-h2{
+
+h2 {
     color: black;
+    font-size: 1.2rem;
+    margin-bottom: 0.5rem;
 }
-/* footer*/
-footer{
+
+/* Footer */
+footer {
     margin-top: 15px;
 }
-.foot-panel1{
+
+.foot-panel1 {
     background-color: #37475a;
     color: white;
     height: 50px;
-    display:flex;/*to do all things at center*/
+    display: flex;
     justify-content: center;
     align-items: center;
     font-size: 0.85rem;
 }
-.foot-panel2{
+
+.foot-panel2 {
     background-color: #222f3d;
     color: white;
     height: 300px;
     display: flex;
     justify-content: space-evenly;
 }
-ul{
+
+ul {
     margin-top: 20px;
 }
-ul a{
-    display: block;/*comes in single line*/
+
+ul a {
+    display: block;
     font-size: 0.85rem;
     margin-top: 10px;
     color: #dddddd;
 }
-.foot-panel3{
-    background-color: #222f3d;
-     color: white;
-     border-top: 0.5px solid white;
-     height: 70px;
-     display: flex;
-     justify-content: center;
-     align-items: center;
-}
-.logo{
-    background-image: url("amazon_logo.jpg");
-    height: 50px;
-    width: 100px;
-    background-size: cover;
 
+.foot-panel3 {
+    background-color: #222f3d;
+    color: white;
+    border-top: 0.5px solid white;
+    height: 70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-.foot-panel4{
-     background-color:#0f1111 ;
+
+.foot-panel4 {
+     background-color: #0f1111;
      color: white;
      height: 80px;
      font-size: 0.7rem;
-    text-align: center;
-     
+     text-align: center;
 }
-.pages{
+
+.pages {
     padding-top: 25px;
 }
-.copyright{
+
+.copyright {
     padding-top: 5px;
 }
+
